Update java-g1gc.md